--- a/app/src/main/res/layout/list_song_item.xml
+++ b/app/src/main/res/layout/list_song_item.xml
@@ -1,7 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical"
-    android:id="@+id/list_song_item_textview"/>
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
+
+    <ImageView
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:id="@+id/list_track_item_imageView" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:paddingLeft="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="298dp"
+            android:layout_height="30dp"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:gravity="center_vertical"
+            android:id="@+id/list_track_item_textView" />
+
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:paddingLeft="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="298dp"
+            android:layout_height="40dp"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:gravity="center_vertical"
+            android:id="@+id/list_album_item_textView" />
+        
+    </LinearLayout>
+
+</LinearLayout>
